--- a/Todoshka/View/Base.lproj/Main.storyboard
+++ b/Todoshka/View/Base.lproj/Main.storyboard
@@ -8,6 +8,45 @@
     </dependencies>
     <scenes>
         <!--Todoshka-->
+        <scene sceneID="JLi-rc-8UG">
+            <objects>
+                <tableViewController id="eLK-DT-aeA" customClass="CategoryViewController" customModule="Todoshka" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" id="68J-3y-6rl">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="CategoryCell" id="H6x-Cb-vIQ">
+                                <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="H6x-Cb-vIQ" id="z4z-s4-DhA">
+                                    <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="eLK-DT-aeA" id="GGC-fQ-bMa"/>
+                            <outlet property="delegate" destination="eLK-DT-aeA" id="4Eu-n5-PP6"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Todoshka" id="qV8-Bf-z9r">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="H4f-Dk-tsM">
+                            <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            <connections>
+                                <action selector="addButtonPressed:" destination="eLK-DT-aeA" id="ysD-wK-E7l"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <segue destination="JYC-dh-WPA" kind="show" identifier="goToItems" id="tIc-LL-fxJ"/>
+                    </connections>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="z9e-lY-ET5" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1549" y="67"/>
+        </scene>
+        <!--Items-->
         <scene sceneID="gel-MM-mrd">
             <objects>
                 <tableViewController id="JYC-dh-WPA" customClass="TodoListViewController" customModule="Todoshka" customModuleProvider="target" sceneMemberID="viewController">
@@ -38,7 +77,7 @@
                             <outlet property="delegate" destination="JYC-dh-WPA" id="S0R-oP-Y1J"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" title="Todoshka" id="YTu-nH-Wul">
+                    <navigationItem key="navigationItem" title="Items" id="YTu-nH-Wul">
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="OxO-BH-cnp">
                             <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <connections>
@@ -49,7 +88,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="e6M-ii-RU7" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1678.2608695652175" y="66.964285714285708"/>
+            <point key="canvasLocation" x="2406" y="67"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="nMe-EG-56x">
@@ -59,14 +98,15 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="9wm-Z6-WoN">
                         <rect key="frame" x="0.0" y="44" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
-                        <color key="barTintColor" red="0.97647058819999999" green="0.97647058819999999" blue="0.7725490196" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="barTintColor" red="0.98039215690000003" green="0.85098039219999999" blue="0.63137254899999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <textAttributes key="largeTitleTextAttributes">
                             <color key="textColor" red="0.98039215690000003" green="0.85098039219999999" blue="0.63137254899999995" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         </textAttributes>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="JYC-dh-WPA" kind="relationship" relationship="rootViewController" id="foL-BX-2Yw"/>
+                        <segue destination="eLK-DT-aeA" kind="relationship" relationship="rootViewController" id="QKR-4j-auK"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PSu-8u-8hC" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
